--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,22 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/minhasfinancas
+#spring.datasource.url=jdbc:postgresql://localhost:5432/minhasfinancas
+#spring.datasource.username=postgres
+#spring.datasource.password=ramona1010
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+
+
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:postgresql://testedb.chr7rwget9sm.us-east-1.rds.amazonaws.com:5432/db_teste?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
 spring.datasource.password=ramona1010
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.hbm2dll.create_namespaces=true
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.show_sql=true
